fixed horizontal scrolling issue with course slider

--- a/css/style.css
+++ b/css/style.css
@@ -528,11 +528,6 @@ Our Courses Style
   padding: 100px 0;
 }
 
-#home_course .container {
-  /* padding-left: 0 !important;
-  padding-right: 0 !important; */
-}
-
 .courses_wrapper {
   position: relative;
   margin-top: 40px;
